proper error handling

--- a/Ocean.Inside.Project/Views/Home/About.cshtml
+++ b/Ocean.Inside.Project/Views/Home/About.cshtml
@@ -3,7 +3,7 @@
         <div class="shell">
             <div class="range range-xs-center range-lg-justify">
                 <div class="cell-sm-6 cell-sm-push-1 cell-lg-5 text-sm-left">
-                    <h3>7 плюсов работы с нами</h3>
+                    <h3>7 плюсов работать с нами</h3>
                     <div class="offset-top-15">
                         <ul class="list-group">
                             <li>+ Мы организуем рупповые туры</li>
