--- a/Ocean.Inside.Project/Views/Shared/_404.cshtml
+++ b/Ocean.Inside.Project/Views/Shared/_404.cshtml
@@ -20,12 +20,12 @@
                                     </g>
                                 </svg>
                                 <div class="offset-top-20">
-                                    <h5 class="text-ubold">Page Not Found</h5>
+                                    <h5 class="text-ubold">Страница не найдена</h5>
                                 </div>
                                 <div class="offset-top-15">
-                                    <p class="text-small">The page requested couldn't be found - this could be due to a spelling error in the URL or a removed page.</p>
+                                    <p class="text-small">Запрашиваемая страница не найдена. Проверьте адрес - это может быть орфографическая ошибка.</p>
                                 </div>
-                                <div class="offset-top-30"><a href="@Url.Action("Index", "Home")" class="btn btn-icon btn-icon-left btn-primary"><span class="icon icon-xxs mdi mdi-chevron-left"></span><span>Back to homepage</span></a></div>
+                                <div class="offset-top-30"><a href="@Url.Action("Index", "Home")" class="btn btn-icon btn-icon-left btn-primary"><span class="icon icon-xxs mdi mdi-chevron-left"></span><span>На главную</span></a></div>
                             </div>
                         </div>
                     </div>
