--- a/Ocean.Inside.Project/Views/Shared/_503.cshtml
+++ b/Ocean.Inside.Project/Views/Shared/_503.cshtml
@@ -17,12 +17,12 @@
                                     </g>
                                 </svg>
                                 <div class="offset-top-20">
-                                    <h5 class="text-ubold">Temporary Unavailable</h5>
+                                    <h5 class="text-ubold">Сайт временно недоступен</h5>
                                 </div>
                                 <div class="offset-top-15">
-                                    <p class="text-small">Sorry, we're offline right now to make our site even better. Please, come back later and check what we've been up to.</p>
+                                    <p class="text-small">Просим прощения. В данный момент мы делаем наш сайт лучше :)</p>
                                 </div>
-                                <div class="offset-top-30"><a href="index.html" class="btn btn-icon btn-icon-left btn-primary"><span class="icon icon-xxs mdi mdi-chevron-left"></span><span>Back to homepage</span></a></div>
+                                <div class="offset-top-30"><a href="index.html" class="btn btn-icon btn-icon-left btn-primary"><span class="icon icon-xxs mdi mdi-chevron-left"></span><span>На главную</span></a></div>
                             </div>
                         </div>
                     </div>
