--- a/Ocean.Inside.Project/Views/Tour/HotelTour.cshtml
+++ b/Ocean.Inside.Project/Views/Tour/HotelTour.cshtml
@@ -30,7 +30,7 @@
                         </div>
                         <div class="cell-xs-6 cell-sm-5 cell-md-3 offset-top-40 offset-md-top-0">
                             <div>
-                                <p class="text-extra-small text-silver-chalice text-italic text-uppercase text-spacing-200">ЦЕНА</p>
+                                <p class="text-extra-small text-silver-chalice text-italic text-uppercase text-spacing-200">ЦЕНА НА ОДНОГО</p>
                             </div>
                             <div class="offset-top-0">
                                 <p class="text-big text-ubold text-gray-base text-uppercase">@($"{Model.CurrencyCode.CurrencyCodeToSymbol()}{Model.Price:F0}")</p>
