--- a/Ocean.Inside.Project/Views/Tour/_TourItem.cshtml
+++ b/Ocean.Inside.Project/Views/Tour/_TourItem.cshtml
@@ -15,7 +15,7 @@
                 </div>
             </div>
             <div class="pull-right">
-                <div class="box-offer-price text-gray-base">@($"{Model.CurrencyCode.CurrencyCodeToSymbol()}{Model.Price}")</div>
+                <div class="box-offer-price text-gray-base">@($"{Model.CurrencyCode.CurrencyCodeToSymbol()}{Model.Price}") на одного</div>
             </div>
             <div class="clearfix"></div>
             <div class="offset-top-8 offset-xs-top-4">
