--- a/Ocean.Inside.Project/Views/Shared/_Error.cshtml
+++ b/Ocean.Inside.Project/Views/Shared/_Error.cshtml
@@ -1,13 +1,33 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Error</title>
-</head>
-<body>
-    <hgroup>
-        <h1>Error.</h1>
-        <h2>An error occurred while processing your request.</h2>
-    </hgroup>
-</body>
-</html>
+﻿<main class="page-content">
+    <section>
+        <div data-on="false" data-md-on="true" class="rd-parallax">
+            <div data-speed="0.25" data-type="media" data-url="images/1920x900.jpg" class="rd-parallax-layer"></div>
+            <div data-speed="0" data-type="html" data-md-fade="false" class="rd-parallax-layer">
+                <div class="shell section-80 section-md-145">
+                    <div class="range range-xs-center">
+                        <div class="cell-xs-9 cell-sm-7 cell-md-5 cell-lg-4">
+                            <div class="box box-lg bg-white">
+                                <svg x="0px" y="0px" width="64px" height="80px" viewbox="0 0 32 40">
+                                    <polygon fill="#42A5F5" points="0,4 0,40 28,40 28,12 20,4 "></polygon>
+                                    <polygon fill="#90CAF9" points="4,0 4,36 32.001,36 32.001,7.999 24.001,0 "></polygon>
+                                    <polygon fill="#E1F5FE" points="30.5,9 23,9 23,1.5 "></polygon>
+                                    <g>
+                                        <path fill="#1976D2" d="M19.3,27.8c0-0.2-0.1-1.5-1.5-1.5c-1.5,0-1.5,1.3-1.5,1.5c0,0.4,0.2,1.4,1.5,1.4S19.3,28.2,19.3,27.8z"></path>
+                                        <path fill="#1976D2" d="M18.1,12.8c-4.5,0-4.8,3.5-4.8,4.2H16c0-0.4,0.1-2,2.1-2c1.8,0,2,1.4,2,2.1c0,2.8-3.6,2.5-3.6,7.2v0.1H19                    c0-3.3,3.8-3.8,3.8-7.3C22.8,16.4,22.7,12.8,18.1,12.8z"></path>
+                                    </g>
+                                </svg>
+                                <div class="offset-top-20">
+                                    <h5 class="text-ubold">Ошибка</h5>
+                                </div>
+                                <div class="offset-top-15">
+                                    <p class="text-small">В процессе обработки Вашего запроса возникла ошибка.</p>
+                                </div>
+                                <div class="offset-top-30"><a href="index.html" class="btn btn-icon btn-icon-left btn-primary"><span class="icon icon-xxs mdi mdi-chevron-left"></span><span>На главную</span></a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
