errors and serach implemented

--- a/Ocean.Inside.Project/Views/Error/_503.cshtml
+++ b/Ocean.Inside.Project/Views/Error/_503.cshtml
@@ -17,12 +17,12 @@
                                     </g>
                                 </svg>
                                 <div class="offset-top-20">
-                                    <h5 class="text-ubold">Ошибка</h5>
+                                    <h5 class="text-ubold">Сайт временно недоступен</h5>
                                 </div>
                                 <div class="offset-top-15">
-                                    <p class="text-small">В процессе обработки Вашего запроса возникла ошибка.</p>
+                                    <p class="text-small">Просим прощения. В данный момент мы делаем наш сайт лучше :)</p>
                                 </div>
-                                <div class="offset-top-30"><a href="index.html" class="btn btn-icon btn-icon-left btn-primary"><span class="icon icon-xxs mdi mdi-chevron-left"></span><span>На главную</span></a></div>
+                                <div class="offset-top-30"><a href="@Url.Action("Index", "Home")" class="btn btn-icon btn-icon-left btn-primary"><span class="icon icon-xxs mdi mdi-chevron-left"></span><span>На главную</span></a></div>
                             </div>
                         </div>
                     </div>
