fix pictures + GA added

--- a/Ocean.Inside.Project/Views/Gallery/Index.cshtml
+++ b/Ocean.Inside.Project/Views/Gallery/Index.cshtml
@@ -25,7 +25,7 @@
                     }
                     <a data-photo-swipe-item="" data-size="1170x780" href="@item.MainImage.Path" data-author="@item.Name" class="thumbnail-classic thumbnail-classic-fullwidth">
                         <span class="figure">
-                            <img width="370" height="240" src="@item.MainImage.Path" alt="@item.Name" style="max-height: 240px">
+                            <img src="@item.MainImage.Path" alt="@item.Name" class="image-gallery">
 
                             <span class="figcaption text-left">
                                 <span class="text-ubold text-white">@item.Name</span>
