--- a/Ocean.Inside.Project/Views/Tour/_TourItem.cshtml
+++ b/Ocean.Inside.Project/Views/Tour/_TourItem.cshtml
@@ -5,7 +5,7 @@
     <div class="box-offer box-offer-xs">
         <div class="box-offer-img-wrap">
             <a href="@Url.Action("HotelTour", "Tour", new { id = Model.Id })">
-                <img src="@Model.CoverImage.Path" width="270" height="240" alt="" class="img-responsive center-block">
+                <img src="@Model.CoverImage.Path" alt="" class="img-responsive center-block image-tours">
             </a>
         </div>
         <div class="box-offer-caption text-left">
