--- a/Ocean.Inside.Project/Views/Shared/_Layout.cshtml
+++ b/Ocean.Inside.Project/Views/Shared/_Layout.cshtml
@@ -63,9 +63,9 @@
                                 <li class='@Html.IsActive("Gallery", "Index")'>
                                     @Html.ActionLink("Галерея", "Index", "Gallery")
                                 </li>
-                                <li class='@Html.IsActive("Home", "Index")'>
+                                @*<li class='@Html.IsActive("Home", "Index")'>
                                     @Html.ActionLink("Блог", "Index", "Home")
-                                </li>
+                                </li>*@
                                 <li class='@Html.IsActive("Home", "About")'>
                                     @Html.ActionLink("О нас", "About", "Home")
                                 </li>
